# named_xlsx

./: .gitignore  404.html  LICENSE  Makefile  README.md  README.qmd  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/cli/: index.html
api/engines/: index.html
api/refresh/: index.html
api/utils/: index.html
docs/: index.md  z-api-engines.md  z-api-refresh.md  z-api-utils.md
docs/api/: cli.md  index.md
examples/: sample-1_base.xlsx  sample-2_modified.xlsx  update.toml
named_xlsx/: __init__.py  cli.py  engines.py  refresh.py  utils.py
site/: 404.html  index.html  objects.inv
site/z-api-cli/: index.html
tests/: test_backend_contracts.py  test_calamine_engine.py  test_cli_empty_results.py  test_cli_engines.py  test_cli_typer.py  test_cli_workflows.py  test_engines.py  test_table_conventions.py  test_utils.py
z-api-cli/: index.html
z-api-engines/: index.html
z-api-refresh/: index.html
z-api-utils/: index.html
