[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "named_xlsx"
authors = [
    {name = "Daniel Fosas", email = "d.fosas@ed.ac.uk"},
]
dependencies = [
    "fire",
    "memoization",
    "numpy",
    "openpyxl >3.1.3",
    "pandas >2.2",
    "parse",
    "pyyaml",
    "tabulate",
    "toml",
    "tqdm",
    "xlrd",
]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License",]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/dfosas/named_xlsx"

[project.optional-dependencies]
xlsx = [
    "xlwings >0.33",
]
test = [
    "black",
    "flake8",
    "flake8-bugbear",
    "mypy",
    "pylint",
    "pytest >=8.0",
    "pytest-cov",
]
doc = ["sphinx"]

[project.scripts]
named_xlsx-refresh = "named_xlsx.refresh:refresher"
named_xlsx-save = "named_xlsx.cli:save_cli"
named_xlsx-load = "named_xlsx.cli:load_cli"
named_xlsx-spec = "named_xlsx.cli:specifications_cli"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
minversion = "8"
addopts = "-ra --doctest-modules --cov --cov-append --cov-report xml"
testpaths = [
    "named_xlsx",
    "tests",
]

[tool.coverage.run]
parallel = true
source = [
    "named_xlsx",
    "tests",
]

[tool.flake8]
ignore = "E501"
