[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "named_xlsx"
description = "Work with Excel named cells and tables from Python."
authors = [
    {name = "Daniel Fosas", email = "d.fosas@ed.ac.uk"},
]
dependencies = [
    "fire",
    "memoization",
    "numpy",
    "openpyxl >3.1.3",
    "pandas >2.2",
    "parse",
    "toml",
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["excel", "xlsx", "openpyxl", "named-ranges"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dfosas/named_xlsx"
Documentation = "https://dfosas.github.io/named_xlsx/"
Repository = "https://github.com/dfosas/named_xlsx"

[project.optional-dependencies]
xlsx = [
    "xlwings >=0.35.0",
]
calamine = [
    "python-calamine >=0.6.2",
]

[project.scripts]
named_xlsx-refresh = "named_xlsx.refresh:refresher"
named_xlsx-save = "named_xlsx.cli:save_cli"
named_xlsx-load = "named_xlsx.cli:load_cli"
named_xlsx-spec = "named_xlsx.cli:specifications_cli"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
]
lint = [
    "black",
    "flake8",
    "flake8-bugbear",
    "mypy",
    "pylint",
    "types-toml",
]
test = [
    "pytest >=8.0",
    "pytest-cov",
]
docs = [
    "mkdocstrings-python",
    "zensical",
]

[tool.hatch.version]
path = "named_xlsx/__init__.py"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
minversion = "8"
addopts = "-ra --doctest-modules --cov --cov-append --cov-report xml"
testpaths = [
    "named_xlsx",
    "tests",
]

[tool.coverage.run]
parallel = true
source = [
    "named_xlsx",
    "tests",
]

[tool.flake8]
ignore = "E501"

[tool.hatch.build.targets.wheel]
packages = ["named_xlsx"]

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/examples",
    "/tests",
    "/LICENSE",
    "/Makefile",
    "/README.md",
    "/README.qmd",
    "/zensical.toml",
]
exclude = [
    "/.idea",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.uv-cache",
    "/.venv",
    "/dev",
    "/site",
    "/.coverage",
    "/coverage.xml",
    "/tests/.coverage",
    "/tests/coverage.xml",
    "/**/.DS_Store",
]
